--- a/FrontEndApp/producer__monitoring_app/package.json
+++ b/FrontEndApp/producer__monitoring_app/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
