--- a/FrontEndApp/producer__monitoring_app/package.json
+++ b/FrontEndApp/producer__monitoring_app/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/material": "^5.14.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
