--- a/FrontEndApp/producer__monitoring_app/package.json
+++ b/FrontEndApp/producer__monitoring_app/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.5",
+    "@fontsource/work-sans": "^5.0.5",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
