--- a/FrontEndApp/producerWeb__reDesign/package.json
+++ b/FrontEndApp/producerWeb__reDesign/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "producerweb-redesign",
+  "name": "producer__monitoring_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,25 +12,28 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.7",
-    "@fontsource/work-sans": "^5.0.7",
+    "@fontsource/roboto": "^5.0.5",
+    "@fontsource/work-sans": "^5.0.5",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
-    "zustand": "^4.4.0"
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
+    "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   }
