--- a/FrontEndApp/producerWeb__reDesign/package.json
+++ b/FrontEndApp/producerWeb__reDesign/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "tailwind-scrollbar-hide": "^1.1.7",
