--- a/FrontEndApp/producerWeb__reDesign/package.json
+++ b/FrontEndApp/producerWeb__reDesign/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
