feat: chart, nivorock and rechart

--- a/FrontEndApp/producerWeb__reDesign/package.json
+++ b/FrontEndApp/producerWeb__reDesign/package.json
@@ -17,7 +17,8 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
-    "apexcharts": "^3.41.1",
+    "@nivo/calendar": "^0.83.0",
+    "@nivo/heatmap": "^0.83.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
