--- a/FrontEndApp/producerWeb__reDesign/package.json
+++ b/FrontEndApp/producerWeb__reDesign/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.3",
     "@nivo/calendar": "^0.83.0",
     "@nivo/heatmap": "^0.83.0",
+    "@nivo/line": "^0.83.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
